# creative-swarm

./: .gitignore  ANDROID_BUILD.md  Cargo.toml  README.md  WHIRLED_PEAS.md  build-android.sh  runlocaldevice.sh  sign-apk.sh
.cargo/: config.toml
.claude/agents/: art-vision-author.md  audio-designer.md  bevy-implementer.md  gatekeeper.md  interaction-designer.md  packager.md  performance-critic.md  run-prep.md  rust-art-architect.md  safety-license-critic.md  shader-sketcher.md  wisdom-retro.md
.claude/commands/: flow-1-signal.md  flow-2-plan.md  flow-3-build.md  flow-4-gate.md  flow-5-deploy.md  flow-6-wisdom.md
android/: build.gradle  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/commercial_and_residential_evil/whirled_peas/: MainActivity.kt
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-v31/: themes.xml
assets/shaders/: background_gradient.wgsl  particle.wgsl  post_process.wgsl  trail.wgsl
src/: act_management.rs  audio_reactive.rs  components.rs  interaction.rs  intro.rs  lib.rs  main.rs  particle.rs  post_process.rs  resources.rs  trail.rs  types.rs  visual.rs
